--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -67,14 +67,14 @@
 .openbtn {
   font-size: 0.5em;
   cursor: pointer;
-  background-color: black;
+  background-color: transparent;
   color: whitesmoke;
   padding: 1px 1px;
   border: none;
 }
 
 .openbtn:hover {
-  background-color: transparent;
+  background-color: whitesmoke;
 }
 
 #main {
