--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -148,7 +148,12 @@ img {
   
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  
+  <a class="active" href="index.html">Start</a>
+  <a href="uebermich.html">&Uuml;ber mich</a>
+  <a href="sofortkaeufe.html">Sofortk&auml;ufe</a>
+  <a href="stoffe.html">Stoffe</a>
+  <a href="preise.html">Preise</a>
+  <a href="groessentabelle.html">Gr&ouml&szligentabelle</a>
 </div>
 
 
@@ -160,12 +165,7 @@ img {
     </button>  
   <div class="content">
  <div class="topnav">
-        <a class="active" href="index.html">Start</a>
-        <a href="uebermich.html">&Uumlber mich</a>
-        <a href="sofortkaeufe.html">Sofortk&aumlufe</a>
-        <a href="stoffe.html">Stoffe</a>
-        <a href="preise.html">Preise</a>
-        <a href="groessentabelle.html">Gr&ouml&szligentabelle</a>
+        
    </div>
 
   
