--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -171,16 +171,16 @@ img {
   
    <div class="parallax">
 
-     
- 
-<header>
-    <h1>Meine Stoffe <br> <span>  <div class="right">
+     <div class="right">
     <span>
      
     <img src="erdman_transparent.png" style="height: 20px; width: auto" alt="Erdmann von Vergarnt und Zugenaeht">
     </span>
-        </div></span></h1>
-    <p>Vergarnt und Zugen&auml;ht <a href="https://www.vergarntundzugenaeht.de/groessentabelle.html" target="_blank">
+        </div>
+ 
+<header>
+    <h1>Meine Stoffe <br> <span> Vergarnt und Zugen&auml;ht </span></h1>
+    <p> hier findest du <a href="https://www.vergarntundzugenaeht.de/groessentabelle.html" target="_blank">
 	    meine Gr&ouml;ssentabelle
 	    </a></p>
 </header>
