--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -173,7 +173,7 @@ header {
  <div class="topnav">
         
    </div>
-
+ <img src="logo.png" style="align: right" alt="logo">
   
    <div class="parallax">
 
