--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -175,7 +175,7 @@ header {
  <div class="topnav">
         
    </div>
- <img src="logo.png" style="align: right" alt="logo">
+ <img src="logo.jpg" style="align: right" alt="logo">
   
    <div class="parallax">
 
