--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -176,7 +176,8 @@ header {
  <div class="topnav">
         
    </div>
- <img src="logo.jpg" style="align: right" alt="logo">
+	  
+ <img src="logo.jpg" style="align: right; background-color: transparent; height: 50px; width: auto" alt="logo">
   
    <div class="parallax">
 
