--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -176,9 +176,10 @@ header {
  <div class="topnav">
         
    </div>
+	<div class="right">  
+ <img src="logo.jpg" style="height: 50px; width: auto" alt="logo">
+	  </div>
 	  
- <img src="logo.jpg" style="align: right; background-color: transparent; height: 50px; width: auto" alt="logo">
-  
    <div class="parallax">
 
      
