--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -153,11 +153,7 @@ header {
        </tr>
  
    </table>
-  <div class="right">  
- <img src="logo.jpg" style="height: 50px; width: auto" alt="logo">
-	  </div>
-  
-<div id="mySidebar" class="sidebar">
+  <div class="right"><img src="logo.jpg" style="height: 50px; width: auto" alt="logo"></div>&nbsp;<div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
   <a class="active" href="index.html">Start</a>
   <a href="uebermich.html">&Uuml;ber mich</a>
