--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -132,6 +132,18 @@ header {
     padding: 0px;
 	
 	    }
+	    
+#topright {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    height: 125px;
+    width: 125px;
+    background: url(TRbanner.gif) no-repeat;
+    text-indent: -999em;
+    text-decoration: none;
+}
 
 
 </style>
@@ -153,7 +165,11 @@ header {
        </tr>
  
    </table>
-  <div class="right"><img src="logo.jpg" style="height: 50px; width: auto" alt="logo"></div>&nbsp;<div id="mySidebar" class="sidebar">
+	 
+	 <a id="topright" href="vergarntundzugenaeht.de" title="logo"><img src="logo.jpg" style="height: 50px; width: auto" alt="logo"></a>
+
+	 
+<div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
   <a class="active" href="index.html">Start</a>
   <a href="uebermich.html">&Uuml;ber mich</a>
