--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -140,7 +140,8 @@ header {
     display: block;
     height: 125px;
     width: 125px;
-    background: url(TRbanner.gif) no-repeat;
+    background: url("logo.jpg") no-repeat;
+    background-color: transparent;
     text-indent: -999em;
     text-decoration: none;
 }
@@ -166,7 +167,7 @@ header {
  
    </table>
 	 
-	 <a id="topright" href="vergarntundzugenaeht.de" title="logo"><img src="logo.jpg" style="height: 50px; width: auto" alt="logo"></a>
+	 <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="logo"> </a>
 
 	 
 <div id="mySidebar" class="sidebar">
