--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -139,9 +139,9 @@ header {
     right: 0;
     top: 0;
     display: block;
-    height: 125px;
+    height: auto;
     width: 125px;
-    background: url("logo.jpg") no-repeat;
+    background: url("mstile-150x150.png") no-repeat;
     background-color: transparent;
     text-indent: -999em;
     text-decoration: none;
