--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -141,7 +141,7 @@ header {
     display: block;
     height: auto;
     width: 125px;
-    background: url("mstile-150x150.png") no-repeat;
+    background: url("logo.jpg");
     background-color: transparent;
     text-indent: -999em;
     text-decoration: none;
