--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -31,6 +31,13 @@
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
+  div.desc {
+  padding: 6px;
+  text-align: center;
+  color: black;
+  margin-bottom: 4px;
+  font-size: 69%;
+  }
 }
 
 .sidebar {
@@ -109,7 +116,7 @@ div.desc {
   text-align: center;
   color: black;
   margin-bottom: 4px;
-  font-size: 39%;
+  font-size: 69%;
   white-space: wrap;
   overflow-wrap: break-word;
   width: 90% !important;
