--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -116,7 +116,7 @@ div.desc {
   text-align: center;
   color: black;
   margin-bottom: 4px;
-  font-size: 69%;
+  font-size: 99%;
   white-space: wrap;
   overflow-wrap: break-word;
   width: 90% !important;
@@ -175,7 +175,7 @@ header {
  
    </table>
 	 
-	 <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="logo"> </a>
+	 <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="logo">vergarnt</a>
 
 	 
 <div id="mySidebar" class="sidebar">
