--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -148,7 +148,7 @@ header {
     display: block;
     height: auto;
     width: 125px;
-    background: url("logo.jpg");
+    background-image: url('/logo.jpg');
     background-color: transparent;
     text-indent: -999em;
     text-decoration: none;
