--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -36,7 +36,7 @@
   text-align: center;
   color: black;
   margin-bottom: 4px;
-  font-size: 69%;
+  font-size: 35%;
   }
 }
 
@@ -149,7 +149,7 @@ header {
     height: auto;
     width: 125px;
     background-image: url('/logo.jpg');
-    background-color: transparent;
+    opacity: 0.7;
     text-indent: -999em;
     text-decoration: none;
 }
@@ -175,7 +175,7 @@ header {
  
    </table>
 	 
-	 <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="logo">vergarnt</a>
+	 <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="logo"> </a>
 
 	 
 <div id="mySidebar" class="sidebar">
