--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -148,7 +148,7 @@ header {
     display: block;
     height: auto;
     width: 125px;
-    background-image: url('/logo.jpg');
+    background-image: url('/logo.jpg') responsive;
     text-indent: -999em;
     text-decoration: none;
 }
