--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -31,7 +31,7 @@
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
-  div.desc {
+  .desc {
   padding: 6px;
   text-align: center;
   color: black;
