--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -36,7 +36,7 @@
   text-align: center;
   color: black;
   margin-bottom: 4px;
-  font-size: 35%;
+  font-size: 0.5em;
   }
 }
 
@@ -148,10 +148,18 @@ header {
     display: block;
     height: auto;
     width: 125px;
-    background-image: url('/logo.jpg') no-repeat;
+    background-image: url('/logo.jpg');
     text-indent: -999em;
     text-decoration: none;
 }
+	    
+div.topright {
+  width: 10%;
+  height:  auto;
+  background-image: url('img_flowers.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 1px solid red;
 
 
 </style>
@@ -173,9 +181,9 @@ header {
        </tr>
  
    </table>
-	 
+	 <div class="topright">
 	 <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="logo"> </a>
-
+	 </div>
 	 
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
