--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -148,19 +148,13 @@ header {
     display: block;
     height: auto;
     width: 125px;
-    background-image: url('/logo.jpg');
+    background-image: url('logo.jpg');
+	background-repeat: no-repeat;
+  background-size: contain;
     text-indent: -999em;
     text-decoration: none;
 }
 	    
-div.topright {
-  width: 10%;
-  height:  auto;
-  background-image: url('img_flowers.jpg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  border: 1px solid red;
-
 
 </style>
       <script>
@@ -181,9 +175,9 @@ div.topright {
        </tr>
  
    </table>
-	 <div class="topright">
+	
 	 <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="logo"> </a>
-	 </div>
+	
 	 
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
