--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -31,12 +31,17 @@
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
-  .desc {
-  padding: 6px;
-  text-align: center;
-  color: black;
-  margin-bottom: 4px;
-  font-size: 0.5em;
+  
+}
+@media only screen and (max-width: 768px) {
+  b {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  b {
+    font-size: 10px;
   }
 }
 
