--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -37,10 +37,16 @@
   b {
     font-size: 20px;
   }
+  div.desc {
+    font-size: 20px;
+  }
 }
 
 @media only screen and (max-width: 320px) {
   b {
+    font-size: 10px;
+  }
+  div.desc {
     font-size: 10px;
   }
 }
