--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -109,7 +109,7 @@ div.desc {
   text-align: center;
   color: black;
   margin-bottom: 4px;
-  font-size: 39%;
+  font-size: 45%;
   white-space: wrap;
   width: 90% !important;
   height: 105% !important;
@@ -126,7 +126,7 @@ img {
 }
 
 header {
-    background-color: transparent;
+    opacity: 0.7687;
 	    }
 
 
