--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -109,7 +109,7 @@ div.desc {
   text-align: center;
   color: black;
   margin-bottom: 4px;
-  font-size: 45%;
+  font-size: 1em;
   white-space: wrap;
   width: 90% !important;
   height: 105% !important;
@@ -165,7 +165,7 @@ header {
 <div id="main">
   <button class="openbtn" onclick="openNav()">
     <span>
-    <img src="erdman_transparent.png" style="height: 30px; width: auto" alt="Erdmann von Vergarnt und Zugenaeht">
+    <img src="erdman_transparent.png" style="height: 50px; width: auto" alt="Erdmann von Vergarnt und Zugenaeht">
     </span>
     </button>  
   <div class="content">
