--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -31,6 +31,11 @@
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
+  div.desc {height: 100%;
+  width: 0;
+  position: fixed;
+	  color: red; 
+	font-size: 0.3em;}
 }
 
 .sidebar {
