--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -34,7 +34,7 @@
     display: block;
     height: 125px;
     width: 125px;
-    background: url('logo.jpg) no-repeat;
+    background: url('logo.jpg') no-repeat;
     text-indent: -999em;
     text-decoration: none;
 }
