--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -26,18 +26,6 @@
 	     #more3 {display: none;}
 	     #more4 {display: none;}
 	     #more5 {display: none;}
-	    
-	     #topright {
-    position: absolute;
-    right: 0;
-    top: 0;
-    display: block;
-    height: 125px;
-    width: 125px;
-    background: url('logo.jpg') no-repeat;
-    text-indent: -999em;
-    text-decoration: none;
-}
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
@@ -121,11 +109,10 @@ div.desc {
   text-align: center;
   color: black;
   margin-bottom: 4px;
-  font-size: 1em;
+  font-size: 39%;
   white-space: wrap;
   width: 90% !important;
   height: 105% !important;
-  overflow-wrap: break-word;
   }
 
 
@@ -139,8 +126,7 @@ img {
 }
 
 header {
-    opacity: 0.7687;
-    margin-bottom:2px; /* to match column gap */
+    background-color: transparent;
 	    }
 
 
@@ -163,7 +149,7 @@ header {
        </tr>
  
    </table>
-  <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="TopRight">Top</a>
+  
   
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
@@ -179,7 +165,7 @@ header {
 <div id="main">
   <button class="openbtn" onclick="openNav()">
     <span>
-    <img src="erdman_transparent.png" style="height: 50px; width: auto" alt="Erdmann von Vergarnt und Zugenaeht">
+    <img src="erdman_transparent.png" style="height: 30px; width: auto" alt="Erdmann von Vergarnt und Zugenaeht">
     </span>
     </button>  
   <div class="content">
