--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -32,6 +32,10 @@
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
 }
+/* tablet, landscape iPad, lo-res laptops ands desktops */	    
+@media (min-width:961px) {
+  .content {font-size: 25px;
+}
 
 .sidebar {
   height: 100%;
