--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -140,8 +140,8 @@ header {
     top: 0;
     display: block;
     height: auto;
-    width: 125px;
-    background: url('logo1.jpg') no-repeat;
+    width: 120px;
+    background: url('logo1.jpg');
     text-indent: -999em;
     text-decoration: none;
 }	   
@@ -166,7 +166,7 @@ header {
        </tr>
  
    </table>
-  <a id="topright" href="#" title="TopRight">Top Right Link Text</a>
+  <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="TopRight">Top Right Link Text</a>
   
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
