--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -141,7 +141,6 @@ header {
     display: block;
     height: auto;
     width: 120px;
-    background: url('logo1.jpg');
     text-indent: -999em;
     text-decoration: none;
 }	   
@@ -166,7 +165,7 @@ header {
        </tr>
  
    </table>
-  <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="TopRight">Top Right Link Text</a>
+  <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="TopRight"><img src="logo1.jpg" style="height: 50px; width: auto"></a>
   
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
