--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -166,7 +166,9 @@ header {
        </tr>
  
    </table>
-  <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="TopRight"><img src="logo1.jpg" style="height: 50px; width: auto"></a>
+  <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="TopRight">
+	  <img src="logo1.jpg" style="height: 50px; width: auto">
+	 </a>
   
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
@@ -196,7 +198,7 @@ header {
      
  
 <header>
-    <h1>Meine Stoffe <br> <span> Vergarnt und  Zugen&auml;ht </span></h1>
+    <h1>Meine Stoffe <br> <span> Vergarnt und <wbr>Zugen&auml;ht </span></h1>
 	
     <p> hier findest du <a href="https://www.vergarntundzugenaeht.de/groessentabelle.html" target="_blank">
 	    meine Gr&ouml;ssentabelle </a></p>
