--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -166,9 +166,10 @@ header {
        </tr>
  
    </table>
-  <a id="topright" href="https://www.vergarntundzugenaeht.de/index.html" title="TopRight">
-	  <img src="logo1.jpg" style="height: 50px; width: auto">
-	 </a>
+	 
+  <a href="https://www.vergarntundzugenaeht.de/index.html"
+         <img id="topright" alt="Qries" src="https://www.qries.com/images/banner_logo.png"
+         width=150" height="70"> >
   
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
