--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -167,9 +167,9 @@ header {
  
    </table>
 	 
-  <a href="https://www.vergarntundzugenaeht.de/index.html"
-         <img id="topright" alt="Qries" src="https://www.qries.com/images/banner_logo.png"
-         width=150" height="70"> >
+  <a href="https://www.vergarntundzugenaeht.de/index.html">
+         <img id="topright" alt="Qries" src="logo1.jpg"
+         width="150">
   
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
