--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -142,6 +142,7 @@ header {
     display: block;
     height: auto;
     width: 120px;
+    background-color: transparent;
     text-indent: -999em;
     text-decoration: none;
 }	   
@@ -168,8 +169,8 @@ header {
    </table>
 	 
   <a href="https://www.vergarntundzugenaeht.de/index.html">
-         <img id="topright" alt="Qries" src="logo1.jpg"
-         width="150">
+         <img id="topright" alt="logo" src="logo1.jpg"
+         width="250">
   
 <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
