--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -119,6 +119,14 @@ div.desc {
   width: 90% !important;
   height: 105% !important;
   }
+	    
+.title-desc-image {}
+@media only screen and (max-width:560px) {
+  .title-desc-image {
+    zoom:70%;
+    margin:auto;
+  }
+}	    
 
 
 span {
