--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -35,7 +35,7 @@
 /* tablet, landscape iPad, lo-res laptops ands desktops */	    
 @media (min-width:961px) {
 	.content {font-size: 25px;}
-	.desc {font-size: 22px;}
+	.div desc {font-size: 22px;}
 }
 
 .sidebar {
@@ -177,7 +177,7 @@ header {
    </table>
 	 
   <a href="https://www.vergarntundzugenaeht.de/index.html">
-         <img id="topright" alt="logo" src="logo1.jpg"
+         <img id="topright" alt="logo" src="logo1.png"
          width="250">
   
 <div id="mySidebar" class="sidebar">
